--- a/BootWeb2/src/main/resources/application.properties
+++ b/BootWeb2/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.main.web-application-type=servlet
 
+server.port= 8181
+
 # 데이터 베이스 연결
 # DataSource Setting
 spring.datasource.driver-class-name=org.h2.Driver
